// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Spacer > スナップショット X 1`] = `
<body>
  <div>
    <div
      style="display: flex;"
    >
      <div
        style="border-radius: var(--radius-100__1874wf71g); width: 50px; height: 50px; display: flex; align-items: center; justify-content: center;"
      />
      <div
        aria-hidden="true"
        class="spacer__jsmiqpe spacer_spacerStyle_x_200__jsmiqpi spacer_spacerStyle_variants_x_200__jsmiqp3"
      />
      <div
        style="border-radius: var(--radius-100__1874wf71g); width: 50px; height: 50px; display: flex; align-items: center; justify-content: center;"
      />
    </div>
  </div>
</body>
`;

exports[`Spacer > スナップショット Y 1`] = `
<body>
  <div>
    <div>
      <div
        style="border-radius: var(--radius-100__1874wf71g); width: 50px; height: 50px; display: flex; align-items: center; justify-content: center;"
      />
      <div
        aria-hidden="true"
        class="spacer__jsmiqpe spacer_spacerStyle_y_200__jsmiqpp spacer_spacerStyle_variants_y_200__jsmiqpa"
      />
      <div
        style="border-radius: var(--radius-100__1874wf71g); width: 50px; height: 50px; display: flex; align-items: center; justify-content: center;"
      />
    </div>
  </div>
</body>
`;
